[package]
name = "multi_index_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = { version = "^1.1"}
proc-macro2 = { version = "^1.0"}
syn = { version = "^1.0", features = ["full"] }
quote = { version = "^1.0" }

[lib]
proc-macro = true