[package]
name = "multi_index_map"
version = "0.6.0"
edition = "2021"
authors = ["Louis Wyborn <louiswyborn@gmail.com>"]
rust-version = "1.62"
license = "MIT"
description = "MultiIndexMap: A generic multi index map inspired by boost multi index containers"
repository = "https://github.com/lun3x/multi_index_map"
keywords = ["multi_index", "container", "map", "boost"]
categories = ["data-structures"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multi_index_map_derive = {version="0.5", path="../multi_index_map_derive"}

# Used as the backing store of all the elements.
slab = { version = "0.4" }

# Used for the hashed indexes. Provides a faster (non-cryptographically secure) hash function than the standard library.
rustc-hash = { version = "1.1"}

[dev-dependencies]
# Used for benchmarking
criterion = "0.5.0"

[[bench]]
name = "performance"
harness = false