[package]
name = "multi_index_map_derive"
version = "0.15.1"
edition = "2021"
authors = ["Louis Wyborn <louiswyborn@gmail.com>"]
rust-version = "1.88"
license = "MIT"
description = "MultiIndexMap: A generic multi index map inspired by boost multi index containers"
repository = "https://github.com/lun3x/multi_index_map"
keywords = ["multi_index", "container", "map", "boost"]
categories = ["data-structures"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }

[dev-dependencies]
trybuild = "1.0"
