[package]
name = "multi_index_map_derive2"
version = "0.1.0"
edition = "2021"
authors = ["Louis Wyborn <louiswyborn@gmail.com>"]
rust-version = "1.71"
license = "MIT"
description = "Experimental arena-linked derive for multi_index_map"
repository = "https://github.com/lun3x/multi_index_map"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
